# requests-buddy

./: .env.example  .gitignore  AGENTS.md  README.md  brief.md  opencode.json  pyproject.toml  requirements.txt
.opencode/: package-lock.json
docs/: improve-analyze-workflow.md  opencode-auth.md  pr-feat-split-email-requests.md
logs/: last-dedup-marker  notebooklm-sources.json
plans/: implementation-plan.md
prompts/: detect-duplicates-within-org.md  detect-duplicates.md  detect-similar-orgs.md  generate-filename.md  match-unknown-org.md  merge-duplicates.md  normalize-request.md  opencode-normalize.md  split-requests.md
requests/: Fri, 6 Mar--19cc4ce2.md  Fri, 6 Mar-.md  Fri, 6 Mar-access-israel-2.md  Fri, 6 Mar-access-israel.md  Fri, 6 Mar-al-baqour.md  Fri, 6 Mar-assaf-aid-organization-for-refugees-and-asylum-seekers-in-israel.md  Fri, 6 Mar-elah-center.md  Fri, 6 Mar-elem.md  Fri, 6 Mar-ezrat-achim-2.md  Fri, 6 Mar-ezrat-achim.md  Fri, 6 Mar-fw-19cc3a03.md  Fri, 6 Mar-fw-19cc4dd7.md  Fri, 6 Mar-fw-a-short-update-from-the-ground-supporting-those-on-the-frontlines-of-care.md  Fri, 6 Mar-fw-assaf-continues-to-stand-alongside-refugees-even-in-times-of-emergency.md  Fri, 6 Mar-fw-elem-war-update.md  Fri, 6 Mar-fw-emergency-support-for-northern-kibbutzim.md  Fri, 6 Mar-fw-emergency-update-women-on-the-front-lines-of-israel-s-war-with-iran.md  Fri, 6 Mar-fw-how-are-you.md  Fri, 6 Mar-fw-operation-lion-s-roar-rambam-is-treating-700-patients-underground-we-must-pro.md  Fri, 6 Mar-fw-tamar-field-update-one-week-into-the-escalation.md  Fri, 6 Mar-fw.md  (+67 more)
(+494 files in other folders)
