[project]
name = "requests-buddy"
version = "0.1.0"
description = "Automated email ingestion, deduplication, and NotebookLM sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-frontmatter",
    "pyyaml",
    "notebooklm-py[browser]",
    "python-dotenv>=1.2.2",
    "requests",
    "pymupdf>=1.27.1",
]

[project.optional-dependencies]
dev = []
